# NAS-Desktop-SSH-Operator

./: .gitignore  README.md  Start_JellyfinOrganizer.bat  Start_JellyfinOrganizer.command  Start_JellyfinOrganizer.ps1  demo.patch  issue12.patch  pyproject.toml  start.sh
.patchpilot/: incoming.patch
NAS-Desktop-SSH-Operator/: JellyfinOrganizer.pyw  README.md  bootstrap_env.py  requirements.txt
NAS-Desktop-SSH-Operator/src/jfo/: app.py
NAS-Desktop-SSH-Operator/src/jfo/core/: categories.py  media_grouping.py  operations.py  plan.py  validators.py
NAS-Desktop-SSH-Operator/src/jfo/infra/: index_update.py  journal.py  remote_fs.py  settings.py  sqlite_index.py  ssh_client.py
NAS-Desktop-SSH-Operator/src/jfo/ui/: dialogs.py  widgets.py
NAS-Desktop-SSH-Operator/src/jfo/ui/tabs/: tab_analysis.py  tab_move.py
scripts/: sample_paths.csv  sample_paths.txt
src/jfo/: __init__.py
src/jfo/core/: history.py  nfo.py  quoting.py  scriptgen.py
src/jfo/ui/: main_window.py
src/jfo/ui/tabs/: tab_connection.py  tab_create_dirs.py  tab_hardlinks.py  tab_history.py  tab_rename.py  tab_swap.py
tests/: conftest.py  test_collisions.py  test_nfo.py  test_quoting.py
tools/: README_cleanup.txt  cleanup_repo.ps1
